--- a/src/pages/form.css
+++ b/src/pages/form.css
@@ -4,10 +4,14 @@
 }
 .titletext{
     color: #00a3e0;
+    font-size: 1.4rem;
+    font-weight: 600;
+    margin-top: 1rem;
 }
 
 .steps{
     color:#c5c5c5;
+    padding-left: 0.5rem;
 }
 
 .whitecircle{
@@ -41,16 +45,23 @@
 
 .bluebutton{
     background-color: #00a3e0;
-    border-radius: 10%;
-    width: 5rem;
+    width: 8rem;
     color: white;
+    height: 2rem;
+    margin-bottom: 2rem;
+    border-radius:5%;
+    font-weight: 700;
+
 }
 
 .whitebutton{
     background-color: white;
     border: 2px solid #00a3e0;
-    border-radius: 10%;
+    border-radius:5%;
     border-style: solid;
-    width: 5rem;
+    width: 8rem;
+    height: 2rem;
     color:#00a3e0;
+    margin-right: 1rem;
+    font-weight: 700;
 }
